# Wavelink

./: .gitignore  pyproject.toml  requirements.txt
wavelink/: enums.py  node.py  payloads.py  player.py  queue.py  tracks.py  websocket.py
wavelink/ext/spotify/: __init__.py
wavelink/types/: request.py
