[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Wavelink"
version = "2.0.1"
authors = [
  { name="EvieePy", email="evieepy@gmail.com" },
]
dynamic = ["dependencies"]
description = "A robust and powerful Lavalink wrapper for discord.py"
readme = "README.rst"
requires-python = ">=3.10"
classifiers = [
        "License :: OSI Approved :: MIT License",
        "Intended Audience :: Developers",
        "Natural Language :: English",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Topic :: Internet",
        "Topic :: Software Development :: Libraries",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Topic :: Utilities",
]

[project.urls]
"Homepage" = "https://github.com/PythonistaGuild/Wavelink"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
combine_as_imports = true
combine_star = true
line_length = 120

[tool.pyright]
include = [
    "wavelink",
    "wavelink/ext/spotify"
]
exclude = [
    "**/__pycache__",
    "build",
    "dist",
    "docs",
]
reportMissingImports = "none"
reportUnnecessaryTypeIgnoreComment = "warning"
pythonVersion = "3.10"
typeCheckingMode = "basic"